# 3d-validation-toolkit

./: README.md  basic_alignment.py  final_test_report.html  pyproject.toml  regression_testing.py  requirements.txt
examples/: visualization.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_a74ece6f2eac152d___init___py.html  z_a74ece6f2eac152d_alignment_py.html  z_a74ece6f2eac152d_metrics_py.html  z_a74ece6f2eac152d_regression_py.html  z_a74ece6f2eac152d_reporting_py.html  z_a74ece6f2eac152d_utils_py.html  z_a74ece6f2eac152d_visualization_py.html
tests/: conftest.py  test_alignment.py.disabled  test_metrics.py.disabled  test_regression.py.disabled  test_toolkit_core.py
toolkit/: alignment.py  metrics.py  regression.py  reporting.py  utils.py  visualization.py
