[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "3d-validation-toolkit"
version = "1.0.0"
description = "Comprehensive toolkit for validating 3D meshes and point clouds"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your.email@example.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.19",
    "scipy>=1.5",
    "matplotlib>=3.3",
    "scikit-learn>=0.24",
    "Pillow>=8.0",
    "Jinja2>=3.0",
    "trimesh>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.10",
    "pytest-xdist>=2.0",
    "black>=20.8b1",
    "flake8>=3.8",
]

[tool.setuptools]
packages = ["toolkit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
